# pixel_conversion

./: pyproject.toml  readme.md  script.py
colormaps/: custom_colormap.pkl
src/: script.py
test_images/: test_image_pixels.csv
tests/: test_script.py
tests/test_images/output/: test_image_2_pixels.csv  test_image_2_pixels_with_values.csv
